# reh_yolo

./: .gitignore  .gitmodules  Makefile  README.md  dvc.yaml  gan_demo_mnist.py  pyproject.toml  rehe-2.json.dvc  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/library-scripts/: common-debian.sh  python-utils.sh
.dvc/: config
data/: raw.dvc
data/raw/: IMAG0772.jpeg.dvc  rehe-2.json.dvc
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: dvc_test.ipynb  dvc_test.slides.html  exploring.ipynb  exploring.slides.html  semi-auto-annotation-label-studio-and-tf2-od.ipynb  starting_out_yolo.ipynb  yolov6.ipynb
src/features/: exif_info.py
