[tool.poetry]
name = "reh_yolo"
version = "0.1.0"
description = ""
authors = ["Lukas <lukas.huber@fh-kufstein.ac.at>"]

[tool.poetry.dependencies]
python = ">=3.6"
dvc = "^2.6.4"
ExifRead = "^2.3.2"
ipykernel = "^6.4.1"
click = "^8.0.3"
Sphinx = "^4.2.0"
label-studio = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
